--- a/force-app/main/default/lwc/cartComponent/cartComponent.html
+++ b/force-app/main/default/lwc/cartComponent/cartComponent.html
@@ -27,7 +27,7 @@
             </div>
         </template>
         <template if:false={cartItems.length}>
-            <p>Your cart is empty</p>
+            <div class="slds-text-align_center">Your cart is empty</div>
         </template>
     </div>
 </template>
